changed table editor overflow handlign from scroll to auto to avoid firefox scrollbars

--- a/src/components/TableEditor.scss
+++ b/src/components/TableEditor.scss
@@ -90,6 +90,6 @@
 
   &__overflow-container {
     max-height: 110px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
